--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
-body {
+html, body, #root {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  height: 100%;
+  text-align: center;
+  font-style: italic;
+  color: darkcyan;
+  background-image: linear-gradient(45deg, lightblue, white);
+  
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.Box {
+  display: inline-block;
+  margin: 10px;
+  padding: 0 10px;
+  border: 1px solid black;
+  border-radius: 10px;
+  box-shadow: 5px 5px 10px;
+  text-align: left;
+}
+
+a {
+  color: blue;
+}
+
+h2 {
+  text-align: center;
+  text-decoration: underline;
 }
