--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ html, body, #root {
   border-radius: 10px;
   box-shadow: 5px 5px 10px;
   text-align: left;
+  background-color: rgba(255, 255, 255, 0.623);
 }
 
 a {
