--- a/src/Components/LayoutArea/Layout/Layout.css
+++ b/src/Components/LayoutArea/Layout/Layout.css
@@ -1,20 +1,25 @@
 .Layout {
-    height: 100%;
-    box-sizing: border-box;
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: 15% 80% 5%;
+  height: 100%;
+  box-sizing: border-box;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: 15% 80% 5%;
 }
 
-.Layout, .Layout > * {
-    border: 1px solid black;
+.Layout,
+.Layout > * {
+  border: 1px solid black;
 }
 
-.Layout > header, .Layout > footer {
-    grid-column: span 6;
+.Layout > header,
+.Layout > footer {
+  grid-column: span 6;
 }
 
 .Layout > main {
-    grid-column: span 5;
-    overflow: auto;
+  grid-column: span 5;
+  overflow: auto;
+  background-image: url("https://images.unsplash.com/photo-1541121472619-e27fb03bc9ef?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
