--- a/src/Components/EmployeesArea/EmployeeCard/EmployeeCard.css
+++ b/src/Components/EmployeesArea/EmployeeCard/EmployeeCard.css
@@ -1,9 +1,14 @@
 .EmployeeCard.Box {
 	width: 300px;
+    height: 100%;
+    margin-bottom: 4rem; 
+
     padding-right: 0;
     display: inline-flex;
+    flex-grow: 1;
     align-items: center;
     background-image: linear-gradient(45deg, lightgreen, white);
+    
 }
 
 .EmployeeCard img {
@@ -17,4 +22,9 @@
 
 .EmployeeCard > div:last-child {
     margin-left: auto;
+}
+
+employeeDetails{
+    height: 100%;
+    overflow: hidden;
 }
