--- a/src/Components/EmployeesArea/Employees/Employees.css
+++ b/src/Components/EmployeesArea/Employees/Employees.css
@@ -1,3 +1,18 @@
-.Employees {
-	
-}
+.Employees > a {
+    position: fixed;
+    top: 10%;
+    right: 5%;
+}	
+
+.newEmployeeButton  {
+    background-color: rgba(255, 255, 255, 0.123);
+     margin-left: 100px;
+     border-radius: 10px;
+ 
+ }
+ .newEmployeeButton:hover{
+     border: yellow solid 2px;
+     cursor: pointer;
+     border-radius: 10px;
+ }
+
