--- a/src/Components/HomeArea/RandomBrand/RandomBrand.css
+++ b/src/Components/HomeArea/RandomBrand/RandomBrand.css
@@ -1,7 +1,8 @@
 .RandomBrand {
-   border: 1px solid rgb(118, 235, 10); 
+   /* border: 1px solid rgb(118, 235, 10);  */
 }
 .RandomBrandImg {
   height: 50px;
   width: 50px;
+  border: 1px solid rgb(118, 235, 10);
 }
